# actix_websocket

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2023-11-11-215949_create_users/: up.sql
migrations/2023-11-11-220018_create_rooms/: up.sql
migrations/2023-11-11-220039_create_convos/: down.sql  up.sql
migrations/2023-11-11-220259_dummy_data/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs  session.rs
static/: 404.html  index.html
static/_next/static/chunks/: 959-6560a15be9129a55.js
static/_next/static/chunks/pages/: index-949f751b8df94ba2.js
static/_next/static/css/: 93a66616c17c2c7c.css
static/_next/static/w8j_S6j2yjw3K_c-XWZOc/: _buildManifest.js
ui/: conf.json  next.config.js  package-lock.json  package.json
ui/components/: avatar.js  convo.js  login.js  room.js
ui/docs/: components_convo.js.html  global.html  index.html  next.config.js.html  out__next_static_chunks_framework-04b2df298aee5fa5.js.html  tailwind.config.js.html
ui/libs/: useConvo.js  useLocalStorage.js
ui/pages/: index.js
