[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
chrono = "0.4.31"
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
diesel_cli = "2.1.1"
rand = "0.8.5"
serde = "1.0.192"
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
